// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`policy table changes pages when a pagination link is clicked on 1`] = `
Array [
  "testy0",
  "testy1",
  "testy10",
  "testy100",
  "testy101",
  "testy103",
  "testy104",
  "testy11",
  "testy13",
  "testy14",
]
`;

exports[`policy table changes pages when a pagination link is clicked on 2`] = `
Array [
  "testy0",
  "testy1",
  "testy10",
  "testy100",
  "testy101",
  "testy103",
  "testy104",
  "testy11",
  "testy13",
  "testy14",
]
`;

exports[`policy table filters based on content of search input 1`] = `
Array [
  "testy0",
]
`;

exports[`policy table shows empty state when there are no policies 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
  role="main"
>
  <div
    class="euiPanel euiPanel--transparent euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-transparent"
  >
    <div
      class="euiEmptyPrompt__main"
    >
      <div
        class="euiEmptyPrompt__icon"
      >
        <span
          color="subdued"
          data-euiicon-type="managementApp"
        />
      </div>
      <div
        class="euiEmptyPrompt__content"
      >
        <div
          class="euiEmptyPrompt__contentInner"
        >
          <h1
            class="euiTitle emotion-euiTitle-m"
          >
            Create your first index lifecycle policy
          </h1>
          <div
            class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
          />
          <div
            class="euiText emotion-euiText-m-euiTextColor-subdued"
          >
            <p>
               An index lifecycle policy helps you manage your indices as they age.
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
          />
          <button
            class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
            data-test-subj="createPolicyButton"
            type="button"
          >
            <span
              class="emotion-euiButtonDisplayContent"
            >
              <span
                color="inherit"
                data-euiicon-type="plusInCircle"
              />
              Create policy
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`policy table sorts when linked index templates header is clicked 1`] = `
Array [
  "testy1",
  "testy5",
  "testy7",
  "testy11",
  "testy13",
  "testy17",
  "testy19",
  "testy23",
  "testy25",
  "testy29",
]
`;

exports[`policy table sorts when linked index templates header is clicked 2`] = `
Array [
  "testy0",
  "testy2",
  "testy4",
  "testy8",
  "testy10",
  "testy14",
  "testy16",
  "testy20",
  "testy22",
  "testy26",
]
`;

exports[`policy table sorts when linked indices header is clicked 1`] = `
Array [
  "testy1",
  "testy5",
  "testy7",
  "testy11",
  "testy13",
  "testy17",
  "testy19",
  "testy23",
  "testy25",
  "testy29",
]
`;

exports[`policy table sorts when linked indices header is clicked 2`] = `
Array [
  "testy0",
  "testy2",
  "testy4",
  "testy8",
  "testy10",
  "testy14",
  "testy16",
  "testy20",
  "testy22",
  "testy26",
]
`;

exports[`policy table sorts when modified date header is clicked 1`] = `
Array [
  "testy0",
  "testy104",
  "testy103",
  "testy101",
  "testy100",
  "testy98",
  "testy97",
  "testy95",
  "testy94",
  "testy92",
]
`;

exports[`policy table sorts when modified date header is clicked 2`] = `
Array [
  "testy1",
  "testy2",
  "testy4",
  "testy5",
  "testy7",
  "testy8",
  "testy10",
  "testy11",
  "testy13",
  "testy14",
]
`;

exports[`policy table sorts when name header is clicked 1`] = `
Array [
  "testy98",
  "testy97",
  "testy95",
  "testy94",
  "testy92",
  "testy91",
  "testy89",
  "testy88",
  "testy86",
  "testy85",
]
`;

exports[`policy table sorts when name header is clicked 2`] = `
Array [
  "testy0",
  "testy1",
  "testy2",
  "testy4",
  "testy5",
  "testy7",
  "testy8",
  "testy10",
  "testy11",
  "testy13",
]
`;
